--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -35,7 +35,7 @@
                 <div class="w-full"></div>
                 <!-- START: menu hamburger -->
                 <div class="w-auto">
-                    <ul id="menu" class="fixed bg-white inset-0 flex flex-col invisible items-center justify-center opacity-0 md:visible md:flex-row md:bg-transparent md:relative md:opacity-100 ">
+                    <ul id="menu" class="fixed bg-white inset-0 flex flex-col invisible items-center justify-center opacity-0 md:visible md:flex-row md:bg-transparent md:relative md:opacity-100">
                         <li class="mx-3 py-6 md:py-0">
                             <a href="#" class="text-black hover:text-white hover:underline">Showcase</a
                 >
@@ -151,7 +151,9 @@
         <div class="relative hero-image">
           <div class="overlay inset-0 bg-black opacity-30 z-10"></div>
           <div class="overlay right-0 bottom-0 md:inset-0">
-            <button class="video hero-cta focus:outline-none z-30 modal-trigger" data-content='<div class="w-screen pb-56 md:w-88 relative z-50">
+            <button
+              class="video hero-cta focus:outline-none z-30 modal-trigger"
+              data-content='<div class="w-screen pb-56 md:w-88 relative z-50">
                 <div class="absolute w-full h-full">
                   <iframe
                     width="100%"
@@ -163,15 +165,90 @@
                   ></iframe>
                 </div>
               </div>'
-            >
-            </button>
+            ></button>
           </div>
-          <img class="absolute inset-0 md:relative w-full h-full object-cover object-center" src="images/content/image-hero.jpg" alt="comfy sofa interior white cream">
+          <img
+            class="absolute inset-0 md:relative w-full h-full object-cover object-center"
+            src="images/content/image-hero.jpg"
+            alt="comfy sofa interior white cream"
+          />
         </div>
       </div>
     </section>
     <!-- END : HERO -->
+    <!-- START : Section Browse the room -->
 
+    <div class="flex bg-gray-100 py-16 px-4" id="browse-the-room">
+      <div class="container mx-auto">
+        <div class="flex flex-start mb-4">
+          <h3 class="text-2xl capitalize font-semibold">browse the room<br />that we designed for you</h3>
+        </div>
+        <div class="grid grid-rows-2 grid-cols-9 gap-4">
+          <!-- START : image browse the room 1 -->
+          <div class="relative col-span-9 row-span-1 md:col-span-4 card" style="height: 180px;">
+            <div class="card-shadow rounded-xl">
+              <img src="images/content/image-catalog-1.jpg" alt="" class="w-full h-full object-cover overlay overflow-hidden rounded-xl">
+            </div>
+            <div class="overlay left-0 top-0 bottom-0 flex justify-center flex-col pl-48 md:pl-72">
+              <h5 class="text-lg font-semibold">
+                Living Room
+              </h5>
+              <span class="">18.309 items</span>
+            </div>
+            <a href="details.html" class="stretched-link"></a>
+          </div>
+          <!-- END : image browse the room 1 -->
+
+          <!-- START : image browse the room 3 -->
+           <div class="relative col-span-9 row-span-1 md:col-span-2 md:row-span-2 card">
+            <div class="card-shadow rounded-xl">
+              <img src="images/content/image-catalog-3.jpg" alt="" class="w-full h-full object-cover overlay overflow-hidden rounded-xl">
+            </div>
+            <div class="overlay inset-0 md:bottom-auto flex justify-center md:items-center flex-col pl-48 md:pl-0 pt-0 md:pt-12">
+              <h5 class="text-lg font-semibold">
+                Decoration
+              </h5>
+              <span class="">77.932 items</span>
+            </div>
+            <a href="details.html" class="stretched-link"></a>
+          </div>
+          <!-- END : image browse the room 3 -->
+
+          <!-- START : image browse the room 4 -->
+          <div class="relative col-span-9 row-span-1 md:col-span-3 md:row-span-2 card">
+            <div class="card-shadow rounded-xl">
+              <img src="images/content/image-catalog-4.jpg" alt="" class="w-full h-full object-cover overlay overflow-hidden rounded-xl">
+            </div>
+            <div class="overlay inset-0 md:bottom-auto flex justify-center md:items-center flex-col pl-48 md:pl-0 pt-0 md:pt-12">
+              <h5 class="text-lg font-semibold">
+                Bed Room
+              </h5>
+              <span class="">22.094 items</span>
+            </div>
+            <a href="details.html" class="stretched-link"></a>
+          </div>
+          <!-- END : image browse the room 4 -->
+
+          <!-- START : image browse the room 2 -->
+          <div class="relative col-span-9 row-span-1 md:col-span-4 card">
+            <div class="card-shadow rounded-xl">
+              <img src="images/content/image-catalog-2.jpg" alt="" class="w-full h-full object-cover overlay overflow-hidden rounded-xl">
+            </div>
+            <div class="overlay left-0 top-0 bottom-0 flex justify-center flex-col pl-48 md:pl-72">
+              <div class="text-lg font-semibold">
+                Children Room
+              </div>
+              <span class="">837 items</span>
+            </div>
+            <a href="details.html" class="stretched-link"></a>
+          </div>
+          <!-- END : image browse the room 2 -->
+        </div>
+      </div>
+    </div>
+
+    <!-- END : Section Browse the room -->
+<div class="min-h-screen"></div>
     <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
     <script>
       window.ga = function () {
