--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -78,15 +78,14 @@
     @apply transition duration-200 absolute inset-0 bg-black bg-opacity-0 border-2 border-black border-opacity-0 rounded-lg;
   }
 
-  .slider .thumbnail .item.selected:after{
-      @apply bg-opacity-35 border-opacity-100;
+  .slider .thumbnail .item.selected:after {
+    @apply bg-opacity-35 border-opacity-100;
   }
 
-  .slider .preview{
-      @apply mb-4 px-4 ;
-      height: 320px;
+  .slider .preview {
+    @apply mb-4 px-4;
+    height: 320px;
   }
-
 }
 
 @screen md {
@@ -100,20 +99,18 @@
     background-size: auto;
   }
 
-  .slider{
-      @apply flex-row;
+  .slider {
+    @apply flex-row;
   }
 
-  .slider .thumbnail{
-      @apply w-auto order-first block overflow-visible pl-0;
+  .slider .thumbnail {
+    @apply w-auto order-first block overflow-visible pl-0;
   }
 
-  .slider .preview{
-      height: 609px;
-      width: 560px;
+  .slider .preview {
+    height: 609px;
+    width: 560px;
   }
-
-
 }
 
 @layer utilities {
