--- a/src/templates/details.html
+++ b/src/templates/details.html
@@ -287,9 +287,90 @@
     </section>
     <!-- END : details -->
 
+    <!-- START : complete your room -->
+    <section class="bg-gray-100 px-4 py-16">
+      <div class="container mx-auto">
+        <div class="flex flex-start mb-4">
+          <h3 class="text-2xl capitalize font-semibold">
+            complete your room <br />with what we designed
+          </h3>
+        </div>
+        <div class="flex flex-wrap overflow-x-auto mb-4 -mx-3">
+          <!-- START : item ke 1 -->
+          <div class="px-3 w-full md:w-3/12 mb-4">
+            <div class="rounded-xl p-4 pb-8 relative bg-white">
+              <div class="rounded-xl overflow-hidden card-shadow w-full h-48">
+                <img
+                  src="./images/content/chair-office-1.jpg"
+                  alt="chair 1"
+                  class="w-full h-full object-cover object-center"
+                />
+              </div>
+              <h5 class="text-lg font-semibold mt-4">Office Chair</h5>
+              <span> IDR 12.000.000</span>
+              <a href="details.html" class="stretched-link"></a>
+            </div>
+          </div>
+          <!-- END : item ke 1 -->
+
+          <!-- START : item ke 2 -->
+          <div class="px-3 w-full md:w-3/12 mb-4">
+            <div class="rounded-xl p-4 pb-8 relative bg-white">
+              <div class="rounded-xl overflow-hidden card-shadow w-full h-48">
+                <img
+                  src="./images/content/chair-office-2.jpg"
+                  alt="chair 1"
+                  class="w-full h-full object-cover object-center"
+                />
+              </div>
+              <h5 class="text-lg font-semibold mt-4">Office Chair</h5>
+              <span> IDR 12.000.000</span>
+              <a href="details.html" class="stretched-link"></a>
+            </div>
+          </div>
+          <!-- END : item ke 2 -->
+
+          <!-- START : item ke 3 -->
+          <div class="px-3 w-full md:w-3/12 mb-4">
+            <div class="rounded-xl p-4 pb-8 relative bg-white">
+              <div class="rounded-xl overflow-hidden card-shadow w-full h-48">
+                <img
+                  src="./images/content/chair-office-3.jpg"
+                  alt="chair 1"
+                  class="w-full h-full object-cover object-center"
+                />
+              </div>
+              <h5 class="text-lg font-semibold mt-4">Office Chair</h5>
+              <span> IDR 12.000.000</span>
+              <a href="details.html" class="stretched-link"></a>
+            </div>
+          </div>
+          <!-- END : item ke 3 -->
+
+          <!-- START : item ke 4 -->
+          <div class="px-3 w-full md:w-3/12 mb-4">
+            <div class="rounded-xl p-4 pb-8 relative bg-white">
+              <div class="rounded-xl overflow-hidden card-shadow w-full h-48">
+                <img
+                  src="./images/content/chair-office-4.jpg"
+                  alt="chair 4"
+                  class="w-full h-full object-cover object-center"
+                />
+              </div>
+              <h5 class="text-lg font-semibold mt-4">Office Chair</h5>
+              <span> IDR 12.000.000</span>
+              <a href="details.html" class="stretched-link"></a>
+            </div>
+          </div>
+          <!-- END : item ke 4 -->
+        </div>
+      </div>
+    </section>
+    <!-- END : complete your room -->
+
     <!-- START : Aside menu -->
     <section class="">
-      <div class="border-t border-b border-gray-200 py-12 mt-16 px-4">
+      <div class="border-b border-gray-200 py-12 px-4">
         <div class="flex justify-center mb-8">
           <img
             src="images/design/logo.svg"
