--- a/src/templates/cart.html
+++ b/src/templates/cart.html
@@ -317,6 +317,42 @@
           <!-- END: Shipping Cart -->
 
           <!-- START: Shipping Details -->
+          <div class="w-full md:px-4 md:w-4/12">
+            <div class="bg-gray-100 px-4 py-6 md:p-8 md:rounded-3xl">
+              <form action="success.html">
+                <div class="flex flex-start mb-6">
+                  <h3 class="text-2xl">Shipping Details</h3>
+                </div>
+                <!-- START : input complete name -->
+                <div class="flex flex-col mb-4">
+                  <label for="complete-name" class="text-sm mb-2"
+                    >Complete Name</label
+                  >
+                  <input
+                    type="text"
+                    id="complete-name"
+                    class="border border-gray-200 rounded-lg px-4 py-2 bg-white text-sm focus:border-blue-200 focus:outline-none"
+                    placeholder="Input your name"
+                  />
+                </div>
+                <!-- END : input complete name -->
+
+                <!-- START : email address -->
+                <div class="flex flex-col mb-4">
+                  <label for="email-address" class="text-sm mb-2"
+                    >Email Address</label
+                  >
+                  <input
+                    type="text"
+                    id="email-address"
+                    class="border border-gray-200 rounded-lg px-4 py-2 bg-white text-sm focus:border-blue-200 focus:outline-none"
+                    placeholder="Input your email address"
+                  />
+                </div>
+                <!-- END : email address -->
+              </form>
+            </div>
+          </div>
           <!-- END: Shipping Details -->
         </div>
       </div>
