javascript cart finished

--- a/src/templates/cart.html
+++ b/src/templates/cart.html
@@ -88,6 +88,7 @@
               </li>
               <li class="ml-6">
                 <a
+                  id="header-cart"
                   href="cart.html"
                   class="flex items-center justify-center h-8 w-8 text-black cart cart-filled"
                 >
@@ -152,7 +153,7 @@
       <div class="container mx-auto px-4">
         <div class="flex -mx-4 flex-wrap">
           <!-- START: Shipping Cart -->
-          <div class="w-full mb-4 px-4 md:mb-0 md:w-8/12">
+          <div class="w-full mb-4 px-4 md:mb-0 md:w-8/12" id="shopping-cart">
             <div
               class="flex flex-start mb-4 mt-8 pb-3 border-b border-gray-200 md:border-b-0"
             >
@@ -185,8 +186,17 @@
             </div>
             <!-- END: table header -->
 
+            <!-- START : cart empty -->
+            <p id="cart-empty" class="hidden text-center py-8">
+              oopps...Troli kosong <a href="details.html">Shop Now!</a>
+            </p>
+            <!-- END : cart empty -->
+
             <!-- START: table item 1 -->
-            <div class="flex flex-start flex-wrap items-center mb-4 -mx-4">
+            <div
+              class="flex flex-start flex-wrap items-center mb-4 -mx-4"
+              data-row="1"
+            >
               <div class="px-4 flex-none">
                 <div class="" style="width: 90px; height: 90px">
                   <img
@@ -219,6 +229,7 @@
               <div class="px-4 w-2/12">
                 <div class="text-center">
                   <button
+                    data-delete-item="1"
                     class="text-red-600 border-none focus:outline-none px-3 py-1"
                   >
                     X
@@ -229,7 +240,10 @@
             <!-- END: table item 1 -->
 
             <!-- START: table item 2 -->
-            <div class="flex flex-start flex-wrap items-center mb-4 -mx-4">
+            <div
+              class="flex flex-start flex-wrap items-center mb-4 -mx-4"
+              data-row="2"
+            >
               <div class="px-4 flex-none">
                 <div class="" style="width: 90px; height: 90px">
                   <img
@@ -262,6 +276,7 @@
               <div class="px-4 w-2/12">
                 <div class="text-center">
                   <button
+                    data-delete-item="2"
                     class="text-red-600 border-none focus:outline-none px-3 py-1"
                   >
                     X
@@ -272,7 +287,10 @@
             <!-- END: table item 2 -->
 
             <!-- START: table item 3 -->
-            <div class="flex flex-start flex-wrap items-center mb-4 -mx-4">
+            <div
+              class="flex flex-start flex-wrap items-center mb-4 -mx-4"
+              data-row="3"
+            >
               <div class="px-4 flex-none">
                 <div class="" style="width: 90px; height: 90px">
                   <img
@@ -305,6 +323,7 @@
               <div class="px-4 w-2/12">
                 <div class="text-center">
                   <button
+                    data-delete-item="3"
                     class="text-red-600 border-none focus:outline-none px-3 py-1"
                   >
                     X
@@ -317,7 +336,7 @@
           <!-- END: Shipping Cart -->
 
           <!-- START: Shipping Details -->
-          <div class="w-full md:px-4 md:w-4/12">
+          <div class="w-full md:px-4 md:w-4/12" id="shipping-details">
             <div class="bg-gray-100 px-4 py-6 md:p-8 md:rounded-3xl">
               <form action="success.html">
                 <div class="flex flex-start mb-6">
@@ -329,6 +348,7 @@
                     >Complete Name</label
                   >
                   <input
+                    data-input
                     type="text"
                     id="complete-name"
                     class="border border-gray-200 rounded-lg px-4 py-2 bg-white text-sm focus:border-blue-200 focus:outline-none"
@@ -350,6 +370,145 @@
                   />
                 </div>
                 <!-- END : email address -->
+
+                <!-- START : address -->
+                <div class="flex flex-col mb-4">
+                  <label for="address" class="text-sm mb-2">Address</label>
+                  <input
+                    type="text"
+                    id="address"
+                    class="border border-gray-200 rounded-lg px-4 py-2 bg-white text-sm focus:border-blue-200 focus:outline-none"
+                    placeholder="Input your address"
+                  />
+                </div>
+                <!-- END : address -->
+
+                <!-- START : phone number -->
+                <div class="flex flex-col mb-4">
+                  <label for="phone-number" class="text-sm mb-2"
+                    >Phone Number</label
+                  >
+                  <input
+                    type="tel"
+                    id="phone-number"
+                    class="border border-gray-200 rounded-lg px-4 py-2 bg-white text-sm focus:border-blue-200 focus:outline-none"
+                    placeholder="Input your phone number"
+                  />
+                </div>
+                <!-- END : phone number -->
+
+                <!-- START : choose courier -->
+                <div class="flex flex-col mb-4">
+                  <label class="text-sm mb-2">Choose Courier</label>
+                  <div class="flex -mx-2 flex-wrap">
+                    <!-- START : courier 1 -->
+                    <div class="px-2 w-6/12 h-24 mb-4">
+                      <button
+                        type="button"
+                        class="border border-gray-200 focus:outline-none focus:border-red-200 flex items-center justify-center rounded-xl bg-white w-full h-full"
+                      >
+                        <img
+                          src="./images/content/courier/fedex.svg"
+                          alt="fedex"
+                          class="objext-contain max-h-full"
+                        />
+                      </button>
+                    </div>
+                    <!-- END : courier 1 -->
+
+                    <!-- START : courier 2 -->
+                    <div class="px-2 w-6/12 h-24 mb-4">
+                      <button
+                        type="button"
+                        class="border border-gray-200 focus:outline-none focus:border-red-200 flex items-center justify-center rounded-xl bg-white w-full h-full"
+                      >
+                        <img
+                          src="./images/content/courier/dhl.svg"
+                          alt="dhl"
+                          class="objext-contain max-h-full"
+                        />
+                      </button>
+                    </div>
+                    <!-- END : courier 2 -->
+                  </div>
+                </div>
+                <!-- END : choose courier -->
+
+                <!-- START : choose payment -->
+                <div class="flex flex-col mb-4">
+                  <label class="text-sm mb-2">Choose Payment</label>
+                  <div class="flex -mx-2 flex-wrap">
+                    <!-- START : payment 1 -->
+                    <div class="px-2 w-6/12 h-24 mb-4">
+                      <button
+                        type="button"
+                        class="border border-gray-200 focus:outline-none focus:border-red-200 flex items-center justify-center rounded-xl bg-white w-full h-full"
+                      >
+                        <img
+                          src="./images/content/payment/midtrans.png"
+                          alt="midtrans"
+                          class="objext-contain max-h-full"
+                        />
+                      </button>
+                    </div>
+                    <!-- END : payment 1 -->
+
+                    <!-- START : payment 2 -->
+                    <div class="px-2 w-6/12 h-24 mb-4">
+                      <button
+                        type="button"
+                        class="border border-gray-200 focus:outline-none focus:border-red-200 flex items-center justify-center rounded-xl bg-white w-full h-full"
+                      >
+                        <img
+                          src="./images/content/payment/master-card.svg"
+                          alt="master-card"
+                          class="object-contain max-h-full"
+                        />
+                      </button>
+                    </div>
+                    <!-- END : payment 2 -->
+                  </div>
+
+                  <div class="flex -mx-2 flex-wrap">
+                    <!-- START : payment 3 -->
+                    <div class="px-2 w-6/12 h-24 mb-4">
+                      <button
+                        type="button"
+                        class="border border-gray-200 focus:outline-none focus:border-red-200 flex items-center justify-center rounded-xl bg-white w-full h-full"
+                      >
+                        <img
+                          src="./images/content/payment/bitcoin.svg"
+                          alt="bitcoin"
+                          class="objext-contain max-h-full"
+                        />
+                      </button>
+                    </div>
+                    <!-- END : payment 3 -->
+
+                    <!-- START : payment 4 -->
+                    <div class="px-2 w-6/12 h-24 mb-4">
+                      <button
+                        type="button"
+                        class="border border-gray-200 focus:outline-none focus:border-red-200 flex items-center justify-center rounded-xl bg-white w-full h-full"
+                      >
+                        <img
+                          src="./images/content/payment/american-express.svg"
+                          alt="american-express"
+                          class="objext-contain max-h-full"
+                        />
+                      </button>
+                    </div>
+                    <!-- END : payment 4 -->
+                  </div>
+                </div>
+                <!-- END : choose payment -->
+                <div class="text-center">
+                  <button
+                    class="bg-gray-300 text-gray-400 focus:bg-red-200 focus:outline-none w-full py-3 rounded-full text-lg focus:text-black transition-all duration-200 px-6"
+                  >
+                    Checkout now
+                  </button>
+                </div>
               </form>
             </div>
           </div>
@@ -361,7 +520,7 @@
 
     <!-- START : Aside menu -->
     <section class="">
-      <div class="border-b border-gray-200 py-12 px-4">
+      <div class="border-b border-t border-gray-200 py-12 px-4">
         <div class="flex justify-center mb-8">
           <img
             src="images/design/logo.svg"
