--- a/src/templates/details.html
+++ b/src/templates/details.html
@@ -88,6 +88,7 @@
               </li>
               <li class="ml-6">
                 <a
+                  id="header-cart"
                   href="cart.html"
                   class="flex items-center justify-center h-8 w-8 text-black cart cart-filled"
                 >
