--- a/src/templates/cart.html
+++ b/src/templates/cart.html
@@ -363,6 +363,7 @@
                     >Email Address</label
                   >
                   <input
+                    data-input
                     type="text"
                     id="email-address"
                     class="border border-gray-200 rounded-lg px-4 py-2 bg-white text-sm focus:border-blue-200 focus:outline-none"
@@ -375,6 +376,7 @@
                 <div class="flex flex-col mb-4">
                   <label for="address" class="text-sm mb-2">Address</label>
                   <input
+                    data-input
                     type="text"
                     id="address"
                     class="border border-gray-200 rounded-lg px-4 py-2 bg-white text-sm focus:border-blue-200 focus:outline-none"
@@ -389,6 +391,7 @@
                     >Phone Number</label
                   >
                   <input
+                    data-input
                     type="tel"
                     id="phone-number"
                     class="border border-gray-200 rounded-lg px-4 py-2 bg-white text-sm focus:border-blue-200 focus:outline-none"
@@ -404,6 +407,8 @@
                     <!-- START : courier 1 -->
                     <div class="px-2 w-6/12 h-24 mb-4">
                       <button
+                        data-value="fedex"
+                        data-name="courier"
                         type="button"
                         class="border border-gray-200 focus:outline-none focus:border-red-200 flex items-center justify-center rounded-xl bg-white w-full h-full"
                       >
@@ -419,6 +424,8 @@
                     <!-- START : courier 2 -->
                     <div class="px-2 w-6/12 h-24 mb-4">
                       <button
+                        data-value="dhl"
+                        data-name="courier"
                         type="button"
                         class="border border-gray-200 focus:outline-none focus:border-red-200 flex items-center justify-center rounded-xl bg-white w-full h-full"
                       >
@@ -441,6 +448,8 @@
                     <!-- START : payment 1 -->
                     <div class="px-2 w-6/12 h-24 mb-4">
                       <button
+                        data-value="midtrans"
+                        data-name="payment"
                         type="button"
                         class="border border-gray-200 focus:outline-none focus:border-red-200 flex items-center justify-center rounded-xl bg-white w-full h-full"
                       >
@@ -456,6 +465,8 @@
                     <!-- START : payment 2 -->
                     <div class="px-2 w-6/12 h-24 mb-4">
                       <button
+                        data-value="master-card"
+                        data-name="payment"
                         type="button"
                         class="border border-gray-200 focus:outline-none focus:border-red-200 flex items-center justify-center rounded-xl bg-white w-full h-full"
                       >
@@ -473,6 +484,8 @@
                     <!-- START : payment 3 -->
                     <div class="px-2 w-6/12 h-24 mb-4">
                       <button
+                        data-value="bitcoin"
+                        data-name="payment"
                         type="button"
                         class="border border-gray-200 focus:outline-none focus:border-red-200 flex items-center justify-center rounded-xl bg-white w-full h-full"
                       >
@@ -488,6 +501,8 @@
                     <!-- START : payment 4 -->
                     <div class="px-2 w-6/12 h-24 mb-4">
                       <button
+                        data-value="american-express"
+                        data-name="payment"
                         type="button"
                         class="border border-gray-200 focus:outline-none focus:border-red-200 flex items-center justify-center rounded-xl bg-white w-full h-full"
                       >
@@ -504,6 +519,7 @@
                 <!-- END : choose payment -->
                 <div class="text-center">
                   <button
+                    disabled
                     class="bg-gray-300 text-gray-400 focus:bg-red-200 focus:outline-none w-full py-3 rounded-full text-lg focus:text-black transition-all duration-200 px-6"
                   >
                     Checkout now
