finishing success page

--- a/src/templates/cart.html
+++ b/src/templates/cart.html
@@ -336,7 +336,7 @@
           <!-- END: Shipping Cart -->
 
           <!-- START: Shipping Details -->
-          <div class="w-full md:px-4 md:w-4/12" id="shipping-details">
+          <div class="w-full md:px-4 md:w-4/12" id="shipping-detail">
             <div class="bg-gray-100 px-4 py-6 md:p-8 md:rounded-3xl">
               <form action="success.html">
                 <div class="flex flex-start mb-6">
@@ -364,7 +364,7 @@
                   >
                   <input
                     data-input
-                    type="text"
+                    type="email"
                     id="email-address"
                     class="border border-gray-200 rounded-lg px-4 py-2 bg-white text-sm focus:border-blue-200 focus:outline-none"
                     placeholder="Input your email address"
@@ -519,8 +519,9 @@
                 <!-- END : choose payment -->
                 <div class="text-center">
                   <button
+                    type="submit"
                     disabled
-                    class="bg-gray-300 text-gray-400 focus:bg-red-200 focus:outline-none w-full py-3 rounded-full text-lg focus:text-black transition-all duration-200 px-6"
+                    class="bg-pink-400 text-black focus:bg-black focus:outline-none w-full py-3 rounded-full text-lg focus:text-pink-400 transition-all duration-200 px-6"
                   >
                     Checkout now
                   </button>
